# spi_testing-rs

./: .gitignore  Cargo.toml  memory.x  readme.md  spi_testing_vscode.code-workspace
.cargo/: config
src/: main.rs
